# stoolap-python

./: .gitignore  Cargo.toml  README.md  benchmark.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
python/stoolap/: __init__.py  __init__.pyi
src/: database.rs  error.rs  lib.rs  statement.rs  transaction.rs  value.rs
tests/: test_async.py  test_basic.py  test_edge_cases.py  test_named_params.py  test_persistence.py  test_prepared.py  test_transactions.py  test_types.py  test_vector.py
